[gd_scene load_steps=25 format=2]

[ext_resource path="res://unit/Unit.gd" type="Script" id=1]
[ext_resource path="res://unit/physmat_unit.tres" type="PhysicsMaterial" id=2]
[ext_resource path="res://unit/lpc/base/masc_human.png" type="Texture" id=3]
[ext_resource path="res://wep/hammer/hammer.tscn" type="PackedScene" id=4]
[ext_resource path="res://unit/unit_capsule_shape.tres" type="Shape" id=5]
[ext_resource path="res://unit/OverlapDetect.gd" type="Script" id=6]
[ext_resource path="res://unit/lpc/LPCLeader.gd" type="Script" id=7]
[ext_resource path="res://unit/material_blood.tres" type="Material" id=8]

[sub_resource type="Animation" id=1]
resource_name = "bash_down"
length = 0.65
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.2, 0.35, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.497071, -0.395724 ), Vector3( 0, -0.822473, -1.15156 ), Vector3( 0, -0.641204, -1.0825 ), Vector3( 0.201366, -0.572753, -0.887126 ), Vector3( 0.604098, -0.435852, -0.496375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.2, 0.35, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1.57513e-06, -90, -38.971 ), Vector3( 2.80508e-06, -90, 101.736 ), Vector3( 4.76057e-06, -90, 67.273 ), Vector3( 3.17371e-06, -90, 44.8487 ), Vector3( 0, -90, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Head/Pitch/wep")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_hits_active"
}, {
"args": [ false ],
"method": "set_hits_active"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_allow_wep_movt"
}, {
"args": [ true ],
"method": "set_allow_wep_movt"
}, {
"args": [  ],
"method": "reset_attack_chain"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "block_end"
length = 0.225
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.025, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.18389, -0.436, -0.811484 ), Vector3( 0.604098, -0.435852, -0.496375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.025, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 4.35174, -4.10698, 46.5809 ), Vector3( 0, -90, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.025, 0.125 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_allow_wep_movt"
}, {
"args": [ false ],
"method": "set_is_blocking"
}, {
"args": [ true ],
"method": "set_allow_wep_movt"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "block_start"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.604098, -0.435852, -0.496375 ), Vector3( 0.18389, -0.436, -0.811484 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ), Vector3( 4.35174, -4.10698, 46.5809 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_allow_wep_movt"
}, {
"args": [ true ],
"method": "set_is_blocking"
}, {
"args": [ true ],
"method": "set_allow_wep_movt"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "prepare_left"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.801896, -0.435852, -0.40242 ), Vector3( -0.853665, -0.435852, -0.216842 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -17.3681, 82.6444, -2.77095 ), Vector3( -35.5411, 119.949, -8.6576 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Head/Pitch/wep")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.075, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_allow_atk_release"
}, {
"args": [ false ],
"method": "set_allow_wep_movt"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "prepare_right"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.604098, -0.435852, -0.496375 ), Vector3( 0.863934, -0.435852, -0.216842 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ), Vector3( -35.5411, -93.8375, -8.6576 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Head/Pitch/wep")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.075, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_allow_atk_release"
}, {
"args": [ false ],
"method": "set_allow_wep_movt"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "reset"
length = 0.05
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.025 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.604098, -0.435852, -0.496375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.025 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Head/Pitch/wep")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_hits_active"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset_attack_chain"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.65
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.325, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.777556, -0.435852, -0.452578 ), Vector3( 0.0422518, -0.435852, -1.20043 ), Vector3( -0.693053, -0.435852, -0.519906 ), Vector3( -0.354203, -0.435852, -0.587238 ), Vector3( 0.604098, -0.435852, -0.496375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.325, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -72.855, -81.301, 8.11824e-06 ), Vector3( -79.8346, -1.95449, 0.805817 ), Vector3( -72.855, 78.961, 8.11824e-06 ), Vector3( -57.2432, 21.8456, 6.37862e-06 ), Vector3( 0, -90, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Head/Pitch/wep")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_hits_active"
}, {
"args": [ false ],
"method": "set_hits_active"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.475 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_allow_wep_movt"
}, {
"args": [ true ],
"method": "set_allow_wep_movt"
}, {
"args": [  ],
"method": "reset_attack_chain"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.7
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.125, 0.2, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.608341, -0.435852, -0.536739 ), Vector3( -0.693053, -0.435852, -0.519906 ), Vector3( 0.042, -0.436, -1.2 ), Vector3( 0.777556, -0.435852, -0.452578 ), Vector3( 0.604098, -0.435852, -0.496375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.125, 0.2, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -68.952, 64.6821, 7.68333e-06 ), Vector3( -72.855, 78.961, 8.11824e-06 ), Vector3( -79.8346, -1.95449, 0.805817 ), Vector3( -72.855, -81.301, 8.11824e-06 ), Vector3( 0, -90, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Head/Pitch/wep")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_hits_active"
}, {
"args": [ false ],
"method": "set_hits_active"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.575 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_allow_wep_movt"
}, {
"args": [ true ],
"method": "set_allow_wep_movt"
}, {
"args": [  ],
"method": "reset_attack_chain"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Head/Pitch/wep:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.604098, -0.485152, -0.0575278 ), Vector3( 0.170491, -0.514658, -0.789732 ), Vector3( 0, 0.568066, -0.686381 ), Vector3( 0.604098, -0.435852, -0.496375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head/Pitch/wep:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -3.64846e-07, -90, -159.047 ), Vector3( 0, -90, -309.563 ), Vector3( 0, -90, -373.218 ), Vector3( 0, -90, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Head/Pitch/wep")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_hits_active"
}, {
"args": [ false ],
"method": "set_hits_active"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_allow_wep_movt"
}, {
"args": [ true ],
"method": "set_allow_wep_movt"
}, {
"args": [  ],
"method": "reset_attack_chain"
} ]
}

[sub_resource type="Curve" id=14]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -3.27274 ), 0.0, 0.0, 0, 0, Vector2( 0.253886, -360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="CurveTexture" id=12]

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.772021, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 0.2
flag_rotate_y = true
direction = Vector3( 0, -1, 0 )
initial_velocity = -2.0
initial_velocity_random = 1.0
angular_velocity = 360.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 15 )
damping = 5.0
damping_random = 1.0
damping_curve = SubResource( 12 )
scale = 5.0
scale_random = 1.0
scale_curve = SubResource( 17 )
hue_variation = -0.04
hue_variation_random = 1.0

[sub_resource type="SphereMesh" id=13]
material = ExtResource( 8 )
radius = 0.02
height = 0.04
radial_segments = 8
rings = 8

[node name="Unit" type="RigidBody"]
collision_layer = 4
collision_mask = 11
mode = 2
physics_material_override = ExtResource( 2 )
continuous_cd = true
contacts_reported = 5
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="Col" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = ExtResource( 5 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.753756, 0 )

[node name="Pitch" type="Spatial" parent="Head"]

[node name="wep" parent="Head/Pitch" instance=ExtResource( 4 )]
transform = Transform( -4.30162e-08, 8.02053e-09, -1, 0.137986, 0.990434, 2.00818e-09, 0.990434, -0.137986, -4.37114e-08, 0, 0.0572231, -0.647669 )

[node name="LPCLeader" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.249311, 0 )
script = ExtResource( 7 )

[node name="Base" type="Sprite3D" parent="LPCLeader"]
pixel_size = 0.05
billboard = 2
shaded = true
double_sided = false
alpha_cut = 2
texture = ExtResource( 3 )
hframes = 13
vframes = 21

[node name="animWeps" type="AnimationPlayer" parent="."]
autoplay = "reset"
playback_default_blend_time = 0.05
anims/bash_down = SubResource( 1 )
anims/block_end = SubResource( 2 )
anims/block_start = SubResource( 3 )
anims/prepare_left = SubResource( 9 )
anims/prepare_right = SubResource( 8 )
anims/reset = SubResource( 4 )
anims/swipe_left = SubResource( 5 )
anims/swipe_right = SubResource( 6 )
anims/uppercut = SubResource( 7 )

[node name="OverlapDetect" type="Area" parent="."]
script = ExtResource( 6 )

[node name="Col" type="CollisionShape" parent="OverlapDetect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = ExtResource( 5 )

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="LPCAutoAdvance" type="Timer" parent="."]
wait_time = 0.25

[node name="ParticlesBleed" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
emitting = false
amount = 50
one_shot = true
explosiveness = 0.15
randomness = 1.0
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 13 )

[connection signal="animation_finished" from="animWeps" to="." method="_on_animWeps_animation_finished"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="LPCAutoAdvance" to="." method="_on_LPCAutoAdvance_timeout"]
